test/bad/13-05-not-callable.gg
val x: Int = 0;

x(True)
